# chromakit-backend

./: .dockerignore  .env.demo  .env.example  .gitignore  Dockerfile  README.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci-cd.yml
nginx/: nginx-ssl.conf  nginx.conf
src/: main.py
src/application/dtos/: batch_processing_dto.py  common_dto.py  history_dto.py  image_dto.py
src/application/use_cases/: batch_process_image.py  preview_image.py  process_image.py  revert_image.py  upload_image.py
src/domain/entities/: edit_history.py  image.py  profile.py
src/domain/services/: processing_service.py
src/infrastructure/api/: dependencies.py  middlewares.py
src/infrastructure/api/routes/: auth_routes.py  history_routes.py  image_routes.py  processing_routes.py
src/infrastructure/database/: postgres_client.py  supabase_client.py
src/infrastructure/database/repositories/: history_repository.py  image_repository.py  profile_repository.py
src/infrastructure/storage/: supabase_storage.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_batch_processing.py  test_processing_service.py
